🤍 projects page complete !

--- a/content/projects/4th-covid19.yaml
+++ b/content/projects/4th-covid19.yaml
@@ -1,5 +1,6 @@
-category: 데이터
-title: 4차산업혁명위원회 코로나19 타임캡슐
-description: 4차위 코로나19 관련 보고서 쓰기
-author: 김학래
-img: haklaekim.jpg
+category: Data
+year: 2021
+date: 2021. 05. 14 ~ 2021. 08. 10
+title: 코로나19 데이터 보유현황 조사 및 보존 방안 연구
+description: 코로나19로 인해 변화된 사회현상을 기록∙저장하고, 사회 전반의 코로나19 영향 분석을 통해 정책 대안을 마련하는데 목적이 있다. 공공과 민간의 코로나19 관련 데이터 보유 현황을 파악하고 데이터 보존과 저장방안을 제시한다.
+img: 4th_logo.png
